--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.6",
   "dependencies": {
     "lame": "~1.1.0",
-    "speaker": "~0.1.2",
-    "node-mpg123-util": "~0.0.1"
+    "node-mpg123-util": "~0.0.1",
+    "promise": "^7.0.4",
+    "speaker": "~0.1.2"
   }
 }
