--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "stupid-player",
   "version": "0.1.0",
+  "scripts": {
+    "test": "mocha --timeout 15000"
+  },
   "dependencies": {
     "lame": "~1.1.0",
     "node-mpg123-util": "~0.0.1",
