--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stupid-player",
   "version": "0.1.0",
   "scripts": {
-    "test": "mocha --timeout 15000"
+    "test": "sudo apt-get install pulseaudio; mocha --timeout 15000"
   },
   "dependencies": {
     "lame": "~1.1.0",
