Use for for node-mpg123-util

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "dependencies": {
     "lame": "git://github.com/TooTallNate/node-lame.git#596ce2957ed60250cf26b914608f4be75319294a",
-    "node-mpg123-util": "0.0.2",
+    "node-mpg123-util": "git://github.com/kicumkicum/node-mpg123-uti.git#ae4d215",
     "promise": "^7.0.4",
     "speaker": "0.3.0"
   },
