--- a/.editorconfig
+++ b/.editorconfig
@@ -21,3 +21,6 @@ indent_style = tab
 [{package.json,.travis.yml,manifest.json}]
 indent_style = space
 indent_size = 2
+
+[*.md]
+trim_trailing_whitespace = false
