--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "stupid-player",
   "version": "0.2.0",
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "scripts": {
     "test": "mocha --timeout 15000"
   },
