--- a/.editorconfig
+++ b/.editorconfig
@@ -18,7 +18,7 @@ charset = utf-8
 indent_style = tab
 
 # Matches the exact files either package.json or .travis.yml
-[{package.json,.travis.yml,manifest.json}]
+[{*.json,.travis.yml,manifest.json}]
 indent_style = space
 indent_size = 2
 
