--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
     "node": ">=4.0.0"
   },
   "scripts": {
-    "clean": "rm -rf ./lib ./test",
+    "clean": "rm -rf ./lib",
     "prebuild": "npm run clean",
     "build": "./node_modules/.bin/tsc",
     "prestart": "npm run build",
     "start": "node ./lib",
-    "pretest": "npm run build -- --project ./tsconfig.test.json",
-    "test": "mocha --recursive"
+    "test": "mocha --recursive --timeout 15000"
   },
   "dependencies": {
     "lame": "git://github.com/TooTallNate/node-lame.git#596ce2957ed60250cf26b914608f4be75319294a",
+    "mocha": "^3.4.1",
     "node-mpg123-util": "git://github.com/kicumkicum/node-mpg123-util.git#ae4d215",
     "promise": "^7.0.4",
     "speaker": "0.3.0"
