--- a/.editorconfig
+++ b/.editorconfig
@@ -10,15 +10,15 @@ insert_final_newline = true
 
 # Matches multiple files with brace expansion notation
 # Set default charset
-[*.{js,md}]
+[*.{ts,md}]
 charset = utf-8
 
 # Indentation override for all JS under lib directory
-[**.js]
+[**.ts]
 indent_style = tab
 
 # Matches the exact files either package.json or .travis.yml
-[{package.json,.travis.yml,manifest.json}]
+[{*.json,.travis.yml,manifest.json}]
 indent_style = space
 indent_size = 2
 
