--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "test": "node node_modules/mocha/bin/mocha --timeout 15000"
   },
   "dependencies": {
-    "lame": "git://github.com/TooTallNate/node-lame.git#596ce2957ed60250cf26b914608f4be75319294a",
+    "lame": "^1.2.4",
     "node-mpg123-util": "git://github.com/kicumkicum/node-mpg123-util.git#ae4d215",
     "promise": "^7.0.4",
-    "speaker": "0.3.0"
+    "speaker": "^0.4.0"
   },
   "repository": {
     "type": "git",
