--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "stupid-player",
   "version": "0.3.1",
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=8.5.0 <9"
   },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "clean": "rm -rf ./lib",
+    "prepare": "npm run build",
+    "clean": "rm -rf ./dist/*",
     "prebuild": "npm run clean",
-    "build": "./node_modules/.bin/tsc",
+    "build": "tsc",
     "prestart": "npm run build",
-    "start": "node ./lib",
+    "start": "node ./dist/index.js",
     "pretest": "npm run build",
     "test": "mocha --recursive --timeout 15000"
   },
@@ -24,11 +27,13 @@
   },
   "devDependencies": {
     "@types/chai": "3.5.0",
+    "@types/combined-stream": "1.0.2",
+    "@types/magnet-uri": "5.1.2",
     "@types/mocha": "2.2.40",
-    "@types/node": "7.0.12",
+    "@types/node": "14.14.37",
     "@types/torrent-stream": "0.0.5",
     "mocha": "3.4.1",
-    "typescript": "^2.2.2"
+    "typescript": "4.2.3"
   },
   "repository": {
     "type": "git",
@@ -46,7 +51,5 @@
   "bugs": {
     "url": "https://github.com/kicumkicum/stupid-player/issues"
   },
-  "homepage": "https://github.com/kicumkicum/stupid-player",
-  "main": "lib/index",
-  "typings": "lib/index"
+  "homepage": "https://github.com/kicumkicum/stupid-player"
 }
