--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "esModuleInterop": true,
     "target": "es6",
+    "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "lib",
+    "outDir": "dist",
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
     "declaration": true
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
