--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist/",
+    "test/",
+    "CHANGELOG.md",
+    "LICENSE"
+  ],
   "scripts": {
     "prepare": "npm run build",
     "clean": "rm -rf ./dist/*",
