Update deps to work on node@14
Bad: Add ts-ignores and change noImplicitAny to false

--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "test": "mocha --recursive --timeout 15000"
   },
   "dependencies": {
+    "@schneefux/lame": "github:schneefux/node-lame#master",
     "combined-stream": "^1.0.5",
-    "lame": "git://github.com/TooTallNate/node-lame.git#596ce2957ed60250cf26b914608f4be75319294a",
     "magnet-uri": "^5.1.7",
-    "node-mpg123-util": "git://github.com/kicumkicum/node-mpg123-util.git#ae4d215",
+    "node-mpg123-util": "github:jorisdugue/node-mpg123-util#master",
     "promise": "^7.0.4",
-    "speaker": "0.4.0",
+    "speaker": "^0.5.3",
     "torrent-stream": "^1.0.3"
   },
   "devDependencies": {
